# serializer version: 1
# name: TestSegmentGroupHierarchy.test_create_create_segmentgroup_hierarchy[IFTSTA]
  dict({
    'opening_segment': 'UNH',
    'segment_group': None,
    'sub_hierarchy': list([
      dict({
        'opening_segment': 'NAD',
        'segment_group': 'SG1',
        'sub_hierarchy': list([
          dict({
            'opening_segment': 'CTA',
            'segment_group': 'SG2',
            'sub_hierarchy': list([
            ]),
          }),
        ]),
      }),
      dict({
        'opening_segment': 'EQD',
        'segment_group': 'SG4',
        'sub_hierarchy': list([
          dict({
            'opening_segment': 'LOC',
            'segment_group': 'SG6',
            'sub_hierarchy': list([
            ]),
          }),
          dict({
            'opening_segment': 'STS',
            'segment_group': 'SG7',
            'sub_hierarchy': list([
            ]),
          }),
        ]),
      }),
      dict({
        'opening_segment': 'CNI',
        'segment_group': 'SG14',
        'sub_hierarchy': list([
          dict({
            'opening_segment': 'STS',
            'segment_group': 'SG15',
            'sub_hierarchy': list([
              dict({
                'opening_segment': 'EFI',
                'segment_group': 'SG16',
                'sub_hierarchy': list([
                ]),
              }),
              dict({
                'opening_segment': 'NAD',
                'segment_group': 'SG17',
                'sub_hierarchy': list([
                  dict({
                    'opening_segment': 'CTA',
                    'segment_group': 'SG18',
                    'sub_hierarchy': list([
                    ]),
                  }),
                ]),
              }),
              dict({
                'opening_segment': 'GID',
                'segment_group': 'SG25',
                'sub_hierarchy': list([
                ]),
              }),
            ]),
          }),
        ]),
      }),
    ]),
  })
# ---
# name: TestSegmentGroupHierarchy.test_create_create_segmentgroup_hierarchy[ORDCHG]
  dict({
    'opening_segment': 'UNH',
    'segment_group': None,
    'sub_hierarchy': list([
      dict({
        'opening_segment': 'RFF',
        'segment_group': 'SG1',
        'sub_hierarchy': list([
        ]),
      }),
      dict({
        'opening_segment': 'NAD',
        'segment_group': 'SG3',
        'sub_hierarchy': list([
          dict({
            'opening_segment': 'CTA',
            'segment_group': 'SG6',
            'sub_hierarchy': list([
            ]),
          }),
        ]),
      }),
    ]),
  })
# ---
# name: TestSegmentGroupHierarchy.test_create_create_segmentgroup_hierarchy[UTILMDS]
  dict({
    'opening_segment': 'UNH',
    'segment_group': None,
    'sub_hierarchy': list([
      dict({
        'opening_segment': 'RFF',
        'segment_group': 'SG1',
        'sub_hierarchy': list([
        ]),
      }),
      dict({
        'opening_segment': 'NAD',
        'segment_group': 'SG2',
        'sub_hierarchy': list([
          dict({
            'opening_segment': 'CTA',
            'segment_group': 'SG3',
            'sub_hierarchy': list([
            ]),
          }),
        ]),
      }),
      dict({
        'opening_segment': 'IDE',
        'segment_group': 'SG4',
        'sub_hierarchy': list([
          dict({
            'opening_segment': 'LOC',
            'segment_group': 'SG5',
            'sub_hierarchy': list([
            ]),
          }),
          dict({
            'opening_segment': 'RFF',
            'segment_group': 'SG6',
            'sub_hierarchy': list([
            ]),
          }),
          dict({
            'opening_segment': 'SEQ',
            'segment_group': 'SG8',
            'sub_hierarchy': list([
              dict({
                'opening_segment': 'QTY',
                'segment_group': 'SG9',
                'sub_hierarchy': list([
                ]),
              }),
              dict({
                'opening_segment': 'CCI',
                'segment_group': 'SG10',
                'sub_hierarchy': list([
                ]),
              }),
            ]),
          }),
          dict({
            'opening_segment': 'NAD',
            'segment_group': 'SG12',
            'sub_hierarchy': list([
            ]),
          }),
        ]),
      }),
    ]),
  })
# ---
